docker/smart-shepherd/init/envoy/listener.yaml
resources:
  - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
    name: envoy_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 15002
    traffic_direction: OUTBOUND
    listener_filters:
    - name: envoy.filters.listener.tls_inspector
    - name: envoy.filters.listener.original_dst  
    filter_chains:
    - name: https_chain
      filter_chain_match: 
        transport_protocol: tls
      filters:
      - name: envoy.filters.network.tcp_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: passthrough-https
          stat_prefix: https_passthrough
    - name: http_chain
      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: allow_any
              domains:
              - "*"
              routes:
              - match: 
                  prefix: "/"
                route: 
                  cluster: passthrough
                typed_per_filter_config:
                  envoy.filters.http.lua:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
                    disabled: true
          http_filters:
          - name: envoy.filters.http.lua
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
              inline_code: |
                function envoy_on_request(request_handle)
                  local domain = request_handle:headers():get(":authority")                      
                  local path = request_handle:headers():get(":path")

                  local headers, body = request_handle:httpCall(
                  "ext-authz",
                  {
                    [":method"] = "GET",
                    [":path"] = "/auth?domain=" .. domain .. "&path=" .. path,
                    [":authority"] = "ext-authz"
                  },
                  null,
                  5000)
                  request_handle:headers():add("Authorization", body)
                end
          - name: envoy.filters.http.router
